Use emoji picker in hyprland and fix it to use wl-copy

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,6 +34,7 @@ $fileManager = nautilus
 $menu = rofi -dpi 82 -show run -no-parse-known-hosts -theme ~/.config/dotfiles/rofi/wal.rasi
 $lock = swaylock -f -c 000000
 $browser = web
+$emoji = ~/.config/dotfiles/emojis/emoji-picker.sh
 
 $bg #282828
 $red #cc241d
@@ -167,6 +168,8 @@ bind = $mainMod, P, exec, $menu
 # bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, z, exec, $browser
 bind = ALT_SHIFT, t, exec, $lock
+# emoji picker
+bind = ALT_SHIFT, e, exec, $emoji
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
