Making tmux nicer

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -74,6 +74,8 @@ thm_yellow="#d79921"
 thm_blue="#458588"
 thm_orange="#d65d0e"
 thm_black4="#1d2021"
+separator_left="\ue0ba"
+separator_right="\ue0bc"
 
 # colourisation of bars
 set -g pane-active-border-style fg=$thm_blue
@@ -88,13 +90,13 @@ set -g pane-border-style fg=$thm_gray
 set -g status-style bg=default
 # set -g status-fg red
 # setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue,bold] #I #[fg=$thm_fg,bg=$thm_bg] #W #F "
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue,bold]$separator_right #I $separator_left#[fg=$thm_fg,bg=$thm_bg] #W #F "
 
 # setw -g window-status-style fg=red,bg=#555555,none
 setw -g window-status-format "#[fg=$thm_gray,bg=$thm_black4] #I #[fg=$thm_gray,bg=$thm_black] #W #F "
 
 set -g status-left-style none
-set -g status-left "#[fg=$thm_bg,bg=$thm_yellow] #H #[bg=default] "
+set -g status-left "#[fg=$thm_bg,bg=$thm_yellow] #H #[fg=$thm_yellow,bg=$thm_bg]$separator_right#[bg=default] "
 set -g status-left-length 50
-set -g status-right "#[fg=$thm_yellow,bg=$thm_bg] #P #[fg=$thm_bg,bg=$thm_yellow] %H:%M:%S "
+set -g status-right "#[fg=$thm_yellow,bg=$thm_bg] #P #[fg=$thm_bg,bg=$thm_yellow]$separator_right %H:%M:%S "
 
