--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,8 @@
 macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
-font_family JetBrainsMono Nerd Font
+font_family JetBrainsMono NF Light
+bold_font JetBrainsMono NF
 font_size 20
 cursor_shape block
 cursor_blink_interval 0
