Fix waybar fonts

--- a/waybar/config
+++ b/waybar/config
@@ -1,5 +1,5 @@
 {
-  "font": "JetBrains Nerd Font Mono",
+  "font": "JetBrainsMono NFM Light",
   "height": 35,
   "spacing": 15,
   "modules-left": [
