--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,8 @@ set -g default-terminal "tmux-256color"
 set-option -sa terminal-features ',tmux-256color:RGB'
 # set default shell
 set-option -g default-command 'fish'
+# make the panel status live in the centre
+set-option -g status-justify 'centre'
 
 # unbind C-b and set to C-a
 unbind C-b
@@ -90,13 +92,13 @@ set -g pane-border-style fg=$thm_gray
 set -g status-style bg=$thm_bg
 # set -g status-fg red
 # setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue,bold]$separator_right #I $separator_left#[fg=$thm_fg,bg=$thm_bg] #W #F "
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue,bold]$separator_right #I $separator_left#[fg=$thm_fg,bg=$thm_bg] #W #F"
 
 # setw -g window-status-style fg=red,bg=#555555,none
-setw -g window-status-format "#[fg=$thm_bg,bg=$thm_gray]$separator_right #I $separator_left#[fg=$thm_gray,bg=$thm_bg] #W #F "
+setw -g window-status-format "#[fg=$thm_bg,bg=$thm_gray]$separator_right #I $separator_left#[fg=$thm_gray,bg=$thm_bg] #W #F"
 
 set -g status-left-style none
-set -g status-left "#[fg=$thm_bg,bg=$thm_yellow] #H #[fg=$thm_yellow,bg=$thm_bg]$separator_right#[bg=default] "
+set -g status-left "#[fg=$thm_bg,bg=$thm_yellow] #H #[fg=$thm_yellow,bg=$thm_bg]$separator_right#[bg=default]"
 set -g status-left-length 50
 set -g status-right "#[fg=$thm_yellow,bg=$thm_bg] #P #[fg=$thm_bg,bg=$thm_yellow]$separator_right %H:%M:%S "
 
