Tmux panes in absolute centre

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@ set-option -sa terminal-features ',tmux-256color:RGB'
 # set default shell
 set-option -g default-command 'fish'
 # make the panel status live in the centre
-set-option -g status-justify 'centre'
+set-option -g status-justify 'absolute-centre'
 
 # unbind C-b and set to C-a
 unbind C-b
