--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,17 @@
 macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
-font_family JetBrainsMono NF Light
-bold_font JetBrainsMono NF
+# font_family JetBrainsMono NF Light
+font_family Monaspace Neon Light
+bold_font Monaspace Neon Regular
+italic_font Monaspace Neon Light Italic
+bold_italic_font Monaspace Neon Italic
+font_features MonaspaceNeon-Light +liga +calt +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
+font_features MonaspaceNeon-Regular +liga +calt +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
+font_features MonaspaceNeon-LightItalic +liga +calt +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
+font_features MonaspaceNeon-Italic +liga +calt +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
+modify_font cell_height 0
+modify_font baseline -5px
 font_size 20
 cursor_shape block
 cursor_blink_interval 0
