--- a/waybar/config
+++ b/waybar/config
@@ -1,5 +1,5 @@
 {
-  "font": "Monaspace Neon",
+  "font": "Iosevka NF",
   "height": 35,
   "spacing": 15,
   "modules-left": [
@@ -18,25 +18,25 @@
   ],
   "cpu": {
     "interval": 1,
-    "format": " {usage}%",
+    "format": "  {usage}%",
   },
   "memory": {
     "interval": 1,
-    "format": " {percentage}%",
+    "format": "  {percentage}%",
   },
   "clock#date": {
     "interval": 60,
-    "format": "{:%d %B %Y}",
+    "format": "<b>{:%d %B %Y}</b>",
   },
   "clock#time": {
     "interval": 1,
-    "format": "{:%H:%M:%S}",
+    "format": "<b>{:%H:%M:%S}</b>",
   },
   "sway/workspaces": {
     "format": "<b>{name}</b>",
   },
   "disk": {
-    "format": " {percentage_used}%",
+    "format": "  {percentage_used}%",
     "path": "/home",
   },
   "network#up": {
