--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,17 +2,17 @@ macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
 # font_family JetBrainsMono NF Light
-font_family Monaspace Neon Regular
-bold_font Monaspace Neon Bold
-italic_font Monaspace Neon Light Italic
-bold_italic_font Monaspace Neon Italic Bold
-font_features MonaspaceNeon-Regular +liga +calt +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
-font_features MonaspaceNeon-Bold +liga +calt +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
-font_features MonaspaceNeon-Italic +liga +calt +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
-font_features MonaspaceNeon-BoldItalic +liga +calt +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
+font_family Iosevka NF
+bold_font Iosevka NF Bold
+italic_font Iosevka NF Light Italic
+bold_italic_font Iosekva NF Italic Bold
+font_features IosevkaNF +dlig
+font_features IosevkaNF-Bold +dlig
+font_features IosevkaNF-Italic +dlig
+font_features IosevkaNF-BoldItalic +dlig
 modify_font cell_height 0
-modify_font baseline -5px
-font_size 18
+modify_font baseline 0px
+font_size 20
 cursor_shape block
 cursor_blink_interval 0
 sync_to_monitor yes
