Font mods for kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@ font_family Iosevka NF
 bold_font Iosevka NF Bold
 italic_font Iosevka NF Light Italic
 bold_italic_font Iosekva NF Italic Bold
-font_features IosevkaNF +dlig
-font_features IosevkaNF-Bold +dlig
-font_features IosevkaNF-Italic +dlig
-font_features IosevkaNF-BoldItalic +dlig
+font_features IosevkaNF +dlig +ss14
+font_features IosevkaNF-Bold +dlig +ss14
+font_features IosevkaNF-Italic +dlig +ss14
+font_features IosevkaNF-BoldItalic +dlig +ss14
 modify_font cell_height 0
 modify_font baseline 0px
 font_size 20
