--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,18 +1,20 @@
 macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
-# font_family JetBrainsMono NF Light
-font_family Iosevka NF
-bold_font Iosevka NF Bold
-italic_font Iosevka NF Light Italic
-bold_italic_font Iosekva NF Italic Bold
+font_family IosevkaNF
+bold_font IosevkaNF-Bold
+italic_font IosevkaNF-LightItalic
+bold_italic_font IosevkaNF-BoldItalic
+
 font_features IosevkaNF +dlig +ss14
 font_features IosevkaNF-Bold +dlig +ss14
 font_features IosevkaNF-Italic +dlig +ss14
 font_features IosevkaNF-BoldItalic +dlig +ss14
+
 modify_font cell_height 0
 modify_font baseline 0px
 font_size 20
+
 cursor_shape block
 cursor_blink_interval 0
 sync_to_monitor yes
