Moving stuff to use catppuccin as well as applying termguicolors properly

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,4 +23,4 @@ window_padding_width 15
 hide_window_decorations yes
 shell .
 
-include themes/gruvbox_dark.conf
+include themes/catppuccin-mocha.conf
