--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # set to 256 colours, xterm
 set -g default-terminal "tmux-256color"
-set-option -sa terminal-features ',tmux-256color:RGB'
+set-option -sa terminal-features ',xterm-kitty:RGB'
 # set default shell
 set-option -g default-command 'fish'
 # make the panel status live in the centre
