--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,36 +48,34 @@ bind b break-pane
 set -g mouse on
 
 # --> Catppuccin (Mocha)
-# thm_bg="#1e1e2e"
-# thm_fg="#cdd6f4"
-# thm_cyan="#89dceb"
-# thm_black="#181825"
-# thm_gray="#313244"
-# thm_magenta="#cba6f7"
-# thm_pink="#f5c2e7"
-# thm_red="#f38ba8"
-# thm_green="#a6e3a1"
-# thm_yellow="#f9e2af"
-# thm_blue="#89b4fa"
-# thm_orange="#fab387"
-# thm_black4="#585b70"
+thm_bg="#1e1e2e"
+thm_fg="#cdd6f4"
+thm_cyan="#89dceb"
+thm_black="#181825"
+thm_gray="#313244"
+thm_magenta="#cba6f7"
+thm_pink="#f5c2e7"
+thm_red="#f38ba8"
+thm_green="#a6e3a1"
+thm_yellow="#f9e2af"
+thm_blue="#89b4fa"
+thm_orange="#fab387"
+thm_black4="#585b70"
 
 # gruvbox
-thm_bg="#282828"
-thm_fg="#ebdbb2"
-thm_cyan="#689d6a"
-thm_black="#282828"
-thm_gray="#928374"
-thm_magenta="#b16286"
-thm_pink="#d3869b"
-thm_red="#cc241d"
-thm_green="#98971a"
-thm_yellow="#d79921"
-thm_blue="#458588"
-thm_orange="#d65d0e"
-thm_black4="#1d2021"
-separator_left="\ue0ba"
-separator_right="\ue0bc"
+# thm_bg="#282828"
+# thm_fg="#ebdbb2"
+# thm_cyan="#689d6a"
+# thm_black="#282828"
+# thm_gray="#928374"
+# thm_magenta="#b16286"
+# thm_pink="#d3869b"
+# thm_red="#cc241d"
+# thm_green="#98971a"
+# thm_yellow="#d79921"
+# thm_blue="#458588"
+# thm_orange="#d65d0e"
+# thm_black4="#1d2021"
 
 # colourisation of bars
 set -g pane-active-border-style fg=$thm_blue
