--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -96,7 +96,7 @@ setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue,bold] #I #[fg=$t
 setw -g window-status-format "#[fg=$thm_bg,bg=$thm_gray] #I #[fg=$thm_gray,bg=$thm_bg] #W #F"
 
 set -g status-left-style none
-set -g status-left "#[fg=$thm_bg,bg=$thm_yellow] #H #[fg=$thm_yellow,bg=$thm_bg]#[bg=default]"
+set -g status-left "#[fg=$thm_fg,bg=$thm_gray] #H #[fg=$thm_yellow,bg=$thm_bg]#[bg=default]"
 set -g status-left-length 50
-set -g status-right "#[fg=$thm_yellow,bg=$thm_bg] #P #[fg=$thm_bg,bg=$thm_yellow] %H:%M:%S "
+set -g status-right "#[fg=$thm_gray,bg=$thm_bg] #P #[fg=$thm_fg,bg=$thm_gray] %H:%M:%S "
 
