Fixing fonts hopefully for the last time now

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,15 +1,15 @@
 macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
-font_family IosevkaNF
-bold_font IosevkaNF-Bold
-italic_font IosevkaNF-LightItalic
-bold_italic_font IosevkaNF-BoldItalic
+font_family IosevkaTermNF
+bold_font IosevkaTermNF-Bold
+italic_font IosevkaTermNF-LightItalic
+bold_italic_font IosevkaTermNF-BoldItalic
 
-font_features IosevkaNF +dlig +ss14
-font_features IosevkaNF-Bold +dlig +ss14
-font_features IosevkaNF-Italic +dlig +ss14
-font_features IosevkaNF-BoldItalic +dlig +ss14
+font_features IosevkaTermNF +dlig +ss14
+font_features IosevkaTermNF-Bold +dlig +ss14
+font_features IosevkaTermNF-Italic +dlig +ss14
+font_features IosevkaTermNF-BoldItalic +dlig +ss14
 
 modify_font cell_height 0
 modify_font baseline 0px
