--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -153,6 +153,8 @@ device:epic-mouse-v1 {
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 # fixing steam's glitchy menus
 windowrulev2 = stayfocused,class:(steam),title:(^$)
+# fixing freecad losing focus
+windowrulev2 = noinitialfocus, class:freecad
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
