Better lsp handling, fixing some other stuff

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -155,6 +155,8 @@ windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 windowrulev2 = stayfocused,class:(steam),title:(^$)
 # fixing freecad losing focus
 windowrulev2 = noinitialfocus, class:freecad
+# fixing runelite's menus
+windowrulev2 = stayfocused,class:(runelite)
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
