--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,10 @@ set-option -sa terminal-features ',xterm-kitty:RGB'
 set-option -g default-command 'fish'
 # make the panel status live in the centre
 set-option -g status-justify 'absolute-centre'
+# set escape time appropriate based on what nvim is expecting
+set-option -sg escape-time 10
+# nvim expects this
+set-option -g focus-events on
 
 # unbind C-b and set to C-a
 unbind C-b
