--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -50,6 +50,8 @@ $white = "#fbf1c7"
 
 # Some default env vars.
 env = XCURSOR_SIZE,64
+# for dbus as well
+envd = XCURSOR_SIZE,64
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -66,7 +68,14 @@ input {
         natural_scroll = no
     }
 
-    sensitivity = 1 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 1.0 # -1.0 - 1.0, 0 means no modification.
+    force_no_accel = 0
+}
+
+device {
+  name = logitech-m570
+  sensitivity = +1.0
+  accel_profile = custom 1 0.0 5.0
 }
 
 general {
@@ -138,6 +147,7 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true
 }
 
 # Example windowrule v1
