--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,17 +12,17 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=,preferred,auto,auto
-monitor=HDMI-A-1,2560x1440@60,0x0,1
+monitor=HDMI-A-1,2560x1440@60,0x0,1.0
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
+exec-once = hyprctl setcursor capitaine-cursors 64
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec = pkill .waybar-wrapped; waybar
+exec = killall .waybar-wrapped; waybar
 exec = swaybg -i /home/adam/.config/backgrounds/background
 # set up idle watcher and auto-lock after 5 minutes
 # exec = swayidle -w timeout 300 "swaylock -f -c 000000"
-exec = hyprctl setcursor 'capitaine-cursors' 64
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -49,9 +49,10 @@ $lightgray = "#bdae93"
 $white = "#fbf1c7"
 
 # Some default env vars.
-env = XCURSOR_SIZE,64
-# for dbus as well
-envd = XCURSOR_SIZE,64
+# env = XCURSOR_THEME,capitain-cursors
+# env = XCURSOR_SIZE,32
+# env = HYPRCURSOR_THEME,capitaine-cursors
+# env = HYPRCURSOR_SIZE,32
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -63,19 +64,14 @@ input {
     kb_rules =
 
     follow_mouse = 1
+    mouse_refocus = 1
 
     touchpad {
         natural_scroll = no
     }
 
-    sensitivity = 1.0 # -1.0 - 1.0, 0 means no modification.
-    force_no_accel = 0
-}
-
-device {
-  name = logitech-m570
-  sensitivity = +1.0
-  accel_profile = custom 1 0.0 5.0
+    sensitivity = 1
+    accel_profile =
 }
 
 general {
@@ -83,7 +79,7 @@ general {
 
     gaps_in = 5
     gaps_out = 10
-    border_size = 5
+    border_size = 3
     col.active_border = rgba(89b4faaa)
     col.inactive_border = rgba(1e1e2eaa)
 
@@ -160,9 +156,10 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = stayfocused,class:(steam),title:(^$)
 # fixing freecad losing focus
 windowrulev2 = noinitialfocus, class:freecad
+# fixing orca-slicer losing focus
+windowrulev2 = stayfocused, class:^(OrcaSlicer)$,title:^()$
 # fixing runelite's menus
 windowrulev2 = stayfocused,class:(runelite)
-
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
