--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -104,3 +104,5 @@ set -g status-left "#[fg=$thm_fg,bg=$thm_gray] #H #[fg=$thm_yellow,bg=$thm_bg]#[
 set -g status-left-length 50
 set -g status-right "#[fg=$thm_gray,bg=$thm_bg] #P #[fg=$thm_fg,bg=$thm_gray] %H:%M:%S "
 
+# setting highlight mode styling
+setw -g mode-style "fg=$thm_gray bg=$thm_blue"
