Moving everything to Nord theme

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -36,17 +36,31 @@ $lock = swaylock -f -c 000000
 $browser = web
 $emoji = ~/.config/dotfiles/emojis/emoji-picker.sh
 
-$bg = "#282828"
-$red = "#cc241d"
-$green = "#98971a"
-$yellow = "#d79921"
-$blue = "#458588"
-$purple = "#b16286"
-$aqua = "#689d68"
-$gray = "#a89984"
-$darkgray = "#1d2021"
-$lightgray = "#bdae93"
-$white = "#fbf1c7"
+# catppuccin
+# $bg = "#282828"
+# $red = "#cc241d"
+# $green = "#98971a"
+# $yellow = "#d79921"
+# $blue = "#458588"
+# $purple = "#b16286"
+# $aqua = "#689d68"
+# $gray = "#a89984"
+# $darkgray = "#1d2021"
+# $lightgray = "#bdae93"
+# $white = "#fbf1c7"
+
+# nord
+$bg = "#2e3440"
+$red = "#bf616a"
+$green = "#a3be8c"
+$yellow = "#ebcb8b"
+$blue = "#5e81ac"
+$purple = "#b48ead"
+$aqua = "#88c0d0"
+$gray = "#434c5e"
+$darkgray = "#3b4252"
+$lightgray = "#4c566a"
+$white = "#d8dee9"
 
 # Some default env vars.
 # env = XCURSOR_THEME,capitain-cursors
