--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -52,19 +52,19 @@ bind b break-pane
 set -g mouse on
 
 # --> Catppuccin (Mocha)
-thm_bg="#1e1e2e"
-thm_fg="#cdd6f4"
-thm_cyan="#89dceb"
-thm_black="#181825"
-thm_gray="#313244"
-thm_magenta="#cba6f7"
-thm_pink="#f5c2e7"
-thm_red="#f38ba8"
-thm_green="#a6e3a1"
-thm_yellow="#f9e2af"
-thm_blue="#89b4fa"
-thm_orange="#fab387"
-thm_black4="#585b70"
+# thm_bg="#1e1e2e"
+# thm_fg="#cdd6f4"
+# thm_cyan="#89dceb"
+# thm_black="#181825"
+# thm_gray="#313244"
+# thm_magenta="#cba6f7"
+# thm_pink="#f5c2e7"
+# thm_red="#f38ba8"
+# thm_green="#a6e3a1"
+# thm_yellow="#f9e2af"
+# thm_blue="#89b4fa"
+# thm_orange="#fab387"
+# thm_black4="#585b70"
 
 # gruvbox
 # thm_bg="#282828"
@@ -81,6 +81,17 @@ thm_black4="#585b70"
 # thm_orange="#d65d0e"
 # thm_black4="#1d2021"
 
+# nord
+thm_bg="#3b4252"
+thm_fg="#d8dee9"
+thm_black="#2e3440"
+thm_gray="#4c566a"
+thm_red="#bf616a"
+thm_green="#a3be8c"
+thm_yellow="#ebcb8b"
+thm_blue="#5e81ac"
+thm_orange="#d08770"
+
 # colourisation of bars
 set -g pane-active-border-style fg=$thm_blue
 set -g pane-border-style fg=$thm_gray
@@ -91,13 +102,13 @@ set -g pane-border-style fg=$thm_gray
 
 # status bar design
 # set -g status-bg brightblack
-set -g status-style bg=$thm_bg
+set -g status-style bg=$thm_black
 # set -g status-fg red
 # setw -g window-status-current-style fg=black,bg=blue,bold
 setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_fg] #I #[fg=$thm_fg,bg=$thm_gray] #W #F "
 
 # setw -g window-status-style fg=red,bg=#555555,none
-setw -g window-status-format "#[fg=$thm_gray,bg=$thm_black4] #I #[fg=$thm_black4,bg=$thm_gray] #W #F "
+setw -g window-status-format "#[fg=$thm_gray,bg=$thm_black] #I #[fg=$thm_black,bg=$thm_gray] #W #F "
 
 set -g status-left-style none
 set -g status-left "#[fg=$thm_fg,bg=$thm_gray] #H #[fg=$thm_yellow,bg=$thm_bg]#[bg=default]"
