Better tmux window theming

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -82,10 +82,11 @@ set -g mouse on
 # thm_black4="#1d2021"
 
 # nord
-thm_bg="#3b4252"
-thm_fg="#d8dee9"
 thm_black="#2e3440"
+thm_bg="#3b4252"
+thm_brightblack="#434c5e"
 thm_gray="#4c566a"
+thm_fg="#d8dee9"
 thm_red="#bf616a"
 thm_green="#a3be8c"
 thm_yellow="#ebcb8b"
@@ -105,10 +106,10 @@ set -g pane-border-style fg=$thm_gray
 set -g status-style bg=$thm_black
 # set -g status-fg red
 # setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_fg] #I #[fg=$thm_fg,bg=$thm_gray] #W #F "
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_brightblack] #W #F "
 
 # setw -g window-status-style fg=red,bg=#555555,none
-setw -g window-status-format "#[fg=$thm_gray,bg=$thm_black] #I #[fg=$thm_black,bg=$thm_gray] #W #F "
+setw -g window-status-format "#[fg=$thm_gray,bg=$thm_bg] #I #[fg=$thm_gray,bg=$thm_bg] #W #F "
 
 set -g status-left-style none
 set -g status-left "#[fg=$thm_fg,bg=$thm_gray] #H #[fg=$thm_yellow,bg=$thm_bg]#[bg=default]"
