--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,4 +23,4 @@ window_padding_width 15
 hide_window_decorations yes
 shell .
 
-include themes/nord.conf
+include themes/gruvbox_material_dark_medium.conf
