--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -82,20 +82,32 @@ set -g mouse on
 # thm_black4="#1d2021"
 
 # nord
-thm_black="#2e3440"
-thm_bg="#3b4252"
-thm_brightblack="#434c5e"
-thm_gray="#4c566a"
-thm_fg="#d8dee9"
-thm_red="#bf616a"
-thm_green="#a3be8c"
-thm_yellow="#ebcb8b"
-thm_blue="#5e81ac"
-thm_orange="#d08770"
+# thm_black="#2e3440"
+# thm_bg="#3b4252"
+# thm_brightblack="#434c5e"
+# thm_gray="#4c566a"
+# thm_fg="#d8dee9"
+# thm_red="#bf616a"
+# thm_green="#a3be8c"
+# thm_yellow="#ebcb8b"
+# thm_blue="#5e81ac"
+# thm_orange="#d08770"
+
+# gruvbox material dark
+thm_black="#665c54"
+thm_bg="#282828"
+thm_brightblack="#928374"
+thm_gray="#d4be98"
+thm_fg="#d4be98"
+thm_red="#ea6962"
+thm_green="#a9b665"
+thm_yellow="#d8a657"
+thm_blue="#7daea3"
+thm_orange="#e78a4e"
 
 # colourisation of bars
 set -g pane-active-border-style fg=$thm_blue
-set -g pane-border-style fg=$thm_gray
+set -g pane-border-style fg=$thm_black
 
 # active / inactive backgrounds
 # set -g window-style fg=default
@@ -103,18 +115,18 @@ set -g pane-border-style fg=$thm_gray
 
 # status bar design
 # set -g status-bg brightblack
-set -g status-style bg=$thm_black
+set -g status-style bg=$thm_bg
 # set -g status-fg red
 # setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_brightblack] #W #F "
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_blue,bg=$thm_bg] #W #F "
 
 # setw -g window-status-style fg=red,bg=#555555,none
 setw -g window-status-format "#[fg=$thm_gray,bg=$thm_bg] #I #[fg=$thm_gray,bg=$thm_bg] #W #F "
 
 set -g status-left-style none
-set -g status-left "#[fg=$thm_fg,bg=$thm_gray] #H #[fg=$thm_yellow,bg=$thm_bg]#[bg=default]"
+set -g status-left "#[fg=$thm_bg,bg=$thm_gray] #H #[fg=$thm_yellow,bg=$thm_bg]#[bg=$thm_bg]"
 set -g status-left-length 50
-set -g status-right "#[fg=$thm_gray,bg=$thm_bg] #P #[fg=$thm_fg,bg=$thm_gray] %H:%M:%S "
+set -g status-right "#[fg=$thm_gray,bg=$thm_bg] #P #[fg=$thm_bg,bg=$thm_gray] %H:%M:%S "
 
 # setting highlight mode styling
-setw -g mode-style "fg=$thm_gray bg=$thm_blue"
+setw -g mode-style "fg=$thm_bg bg=$thm_blue"
