Fixing prompt and tmux coloring

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -118,7 +118,7 @@ set -g pane-border-style fg=$thm_black
 set -g status-style bg=$thm_bg
 # set -g status-fg red
 # setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_blue,bg=$thm_bg] #W #F "
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_fg] #I #[fg=$thm_fg,bg=$thm_black] #W #F "
 
 # setw -g window-status-style fg=red,bg=#555555,none
 setw -g window-status-format "#[fg=$thm_gray,bg=$thm_bg] #I #[fg=$thm_gray,bg=$thm_bg] #W #F "
