Moving to VictorMonoNFM

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,19 +1,14 @@
 macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
-font_family IosevkaTermNF
-bold_font IosevkaTermNF-Bold
-italic_font IosevkaTermNF-LightItalic
-bold_italic_font IosevkaTermNF-BoldItalic
-
-font_features IosevkaTermNF +dlig +ss14
-font_features IosevkaTermNF-Bold +dlig +ss14
-font_features IosevkaTermNF-Italic +dlig +ss14
-font_features IosevkaTermNF-BoldItalic +dlig +ss14
+font_family VictorMonoNFM
+bold_font VictorMonoNFM-Bold
+italic_font VictorMonoNF-LightItalic
+bold_italic_font VictorMonoNF-BoldItalic
 
 modify_font cell_height 0
-modify_font baseline 0px
-font_size 20
+modify_font baseline 2px
+font_size 18
 
 cursor_shape block
 cursor_blink_interval 0
