Moving to Inconsolata

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,13 +1,13 @@
 macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
-font_family VictorMonoNFM
-bold_font VictorMonoNFM-Bold
-italic_font VictorMonoNF-LightItalic
-bold_italic_font VictorMonoNF-BoldItalic
+font_family InconsolataLGCNF
+bold_font InconsolataLGCNF-Bold
+italic_font InconsolataLGCNF-Italic
+bold_italic_font InconsolataLGCNF-BoldItalic
 
 modify_font cell_height 0
-modify_font baseline 2px
+modify_font baseline 3px
 font_size 18
 
 cursor_shape block
