--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,13 +1,8 @@
 macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
-font_family InconsolataLGCNF
-bold_font InconsolataLGCNF-Bold
-italic_font InconsolataLGCNF-Italic
-bold_italic_font InconsolataLGCNF-BoldItalic
-
-modify_font cell_height 0
-modify_font baseline 3px
+modify_font cell_height 3
+modify_font baseline 0px
 font_size 18
 
 cursor_shape block
@@ -19,3 +14,8 @@ hide_window_decorations yes
 shell .
 
 include themes/gruvbox_material_dark_medium.conf
+
+font_family      family="FiraCode Nerd Font Mono" features="+dlig +zero"
+bold_font        auto
+italic_font      family='FiraCode Nerd Font Mono' style=Light features="+dlig +zero"
+bold_italic_font auto
