--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -15,7 +15,7 @@ shell .
 
 include themes/gruvbox_material_dark_medium.conf
 
-font_family      family="FiraCode Nerd Font Mono" features="+dlig +zero"
+font_family      family="FiraCode Nerd Font" features="+dlig +zero"
 bold_font        auto
-italic_font      family='FiraCode Nerd Font Mono' style=Light features="+dlig +zero"
+italic_font      family='FiraCode Nerd Font' style=Light features="+dlig +zero"
 bold_italic_font auto
