--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -96,6 +96,8 @@ set -g mouse on
 # gruvbox material dark
 thm_black="#665c54"
 thm_bg="#282828"
+thm_bg2="#32302f"
+thm_bg3="#45403d"
 thm_brightblack="#928374"
 thm_gray="#d4be98"
 thm_fg="#d4be98"
@@ -118,10 +120,10 @@ set -g pane-border-style fg=$thm_black
 set -g status-style bg=$thm_bg
 # set -g status-fg red
 # setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_fg] #I #[fg=$thm_fg,bg=$thm_black] #W #F "
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_fg] #I #[fg=$thm_fg,bg=$thm_bg3] #W #F "
 
 # setw -g window-status-style fg=red,bg=#555555,none
-setw -g window-status-format "#[fg=$thm_gray,bg=$thm_bg] #I #[fg=$thm_gray,bg=$thm_bg] #W #F "
+setw -g window-status-format "#[fg=$thm_gray,bg=$thm_bg3] #I #[fg=$thm_gray,bg=$thm_bg2] #W #F "
 
 set -g status-left-style none
 set -g status-left "#[fg=$thm_bg,bg=$thm_gray] #H #[fg=$thm_yellow,bg=$thm_bg]#[bg=$thm_bg]"
