--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -55,7 +55,7 @@ input {
     kb_rules =
 
     follow_mouse = 1
-    mouse_refocus = 1
+    mouse_refocus = false
 
     touchpad {
         natural_scroll = no
@@ -148,7 +148,9 @@ windowrulev2 = stayfocused,class:(steam),title:(^$)
 # fixing freecad losing focus
 windowrulev2 = noinitialfocus, class:freecad
 # fixing orca-slicer losing focus
-windowrulev2 = stayfocused, class:^(OrcaSlicer)$,title:^()$
+# windowrulev2 = stayfocused, class:^(OrcaSlicer)$,title:(^orca-slicer$)
+windowrulev2 = minsize 1 1, class:^(OrcaSlicer)$,title:(^orca-slicer$)
+windowrulev2 = noinitialfocus, class:^(OrcaSlicer)$,title:(^orca-slicer$)
 # fixing runelite's menus
 windowrulev2 = stayfocused,class:(runelite)
 
