--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,9 @@
 macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
-modify_font cell_height 3
-modify_font baseline -1px
-font_size 16
+modify_font cell_height 5
+modify_font baseline 0px
+font_size 18
 
 cursor_shape block
 cursor_blink_interval 0
@@ -15,7 +15,7 @@ shell .
 
 include themes/gruvbox_material_dark_medium.conf
 
-font_family      family="FiraCode Nerd Font" features="+dlig +zero"
+font_family      family="FiraCode Nerd Font" style=Light features="+dlig +zero"
 bold_font        auto
 italic_font      family='FiraCode Nerd Font' style=Light features="+dlig +zero"
 bold_italic_font auto
