Hyprland window control

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -169,6 +169,10 @@ bind = $mainMod, z, exec, $browser
 bind = ALT_SHIFT, t, exec, $lock
 # emoji picker
 bind = ALT_SHIFT, e, exec, $emoji
+# maximise
+bind = $mainMod, m, fullscreen, 1
+# fullscreen
+bind = $mainMod, f, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
