volume change script implemented

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,6 +35,8 @@ $menu = rofi -dpi 82 -show run -no-parse-known-hosts -theme ~/.config/dotfiles/r
 $lock = swaylock -f -c 000000
 $browser = web
 $emoji = ~/.config/dotfiles/emojis/emoji-picker.sh
+$vol_up = ~/.config/dotfiles/pulseaudio/change-vol.sh up
+$vol_down = ~/.config/dotfiles/pulseaudio/change-vol.sh down
 
 $bg = #282828
 $fg = #d4be98
@@ -45,6 +47,15 @@ $fg = #d4be98
 # env = HYPRCURSOR_THEME,capitaine-cursors
 # env = HYPRCURSOR_SIZE,32
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+
+# we want Hyprland to use the discrete GPU
+# env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
+
+cursor {
+  # apparently this messes with displays
+  # https://github.com/hyprwm/Hyprland/issues/7045
+  no_hardware_cursors = true
+}
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -91,10 +102,10 @@ decoration {
         passes = 1
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    # drop_shadow = yes
+    # shadow_range = 4
+    # shadow_render_power = 3
+    # col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -146,11 +157,12 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # fixing steam's glitchy menus
 windowrulev2 = stayfocused,class:(steam),title:(^$)
 # fixing freecad losing focus
-windowrulev2 = noinitialfocus, class:freecad
+# windowrulev2 = noinitialfocus, class:freecad
+windowrulev2 = minsize 1 1, class:freecad
 # fixing orca-slicer losing focus
 # windowrulev2 = stayfocused, class:^(OrcaSlicer)$,title:(^orca-slicer$)
 windowrulev2 = minsize 1 1, class:^(OrcaSlicer)$,title:(^orca-slicer$)
-windowrulev2 = noinitialfocus, class:^(OrcaSlicer)$,title:(^orca-slicer$)
+# windowrulev2 = noinitialfocus, class:^(OrcaSlicer)$,title:(^orca-slicer$)
 # fixing runelite's menus
 windowrulev2 = stayfocused,class:(runelite)
 
@@ -173,6 +185,10 @@ bind = ALT_SHIFT, e, exec, $emoji
 bind = $mainMod, m, fullscreen, 1
 # fullscreen
 bind = $mainMod, f, fullscreen
+# vol up
+bind = $mainMod, F11, exec, $vol_down
+# vol down
+bind = $mainMod, F12, exec, $vol_up
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
