--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,6 +2,7 @@ macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
 modify_font cell_height 5
+modify_font cell_width 90%
 modify_font baseline 0px
 font_size 18
 
@@ -16,6 +17,6 @@ shell .
 include themes/gruvbox_material_dark_medium.conf
 
 font_family      family="FiraCode Nerd Font" style=Light features="+dlig +zero"
-bold_font        auto
+bold_font        family="firacode nerd font" style=Regular features="+dlig +zero"
 italic_font      family='FiraCode Nerd Font' style=Light features="+dlig +zero"
-bold_italic_font auto
+bold_italic_font family="FiraCode Nerd Font" style=Regular features="+dlig +zero"
