Fixing volume change hyprland binding

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -186,9 +186,9 @@ bind = $mainMod, m, fullscreen, 1
 # fullscreen
 bind = $mainMod, f, fullscreen
 # vol up
-bind = $mainMod, F11, exec, $vol_down
+bind = Control_L, F11, exec, $vol_down
 # vol down
-bind = $mainMod, F12, exec, $vol_up
+bind = Control_L, F12, exec, $vol_up
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
