--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,7 +2,7 @@ macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
 modify_font cell_height 5
-modify_font cell_width 90%
+modify_font cell_width 100%
 modify_font baseline 0px
 font_size 18
 
@@ -15,8 +15,15 @@ hide_window_decorations yes
 shell .
 
 include themes/gruvbox_material_dark_medium.conf
+# font_family      family="FiraCode Nerd Font" style=Light features="+dlig +zero"
+# bold_font        family="firacode nerd font" style=Regular features="+dlig +zero"
+# italic_font      family='FiraCode Nerd Font' style=Light features="+dlig +zero"
+# bold_italic_font family="FiraCode Nerd Font" style=Regular features="+dlig +zero"
 
-font_family      family="FiraCode Nerd Font" style=Light features="+dlig +zero"
-bold_font        family="firacode nerd font" style=Regular features="+dlig +zero"
-italic_font      family='FiraCode Nerd Font' style=Light features="+dlig +zero"
-bold_italic_font family="FiraCode Nerd Font" style=Regular features="+dlig +zero"
+
+# BEGIN_KITTY_FONTS
+font_family      family='Cascadia Code NF' style=Light features="+ss20"
+bold_font        family='Cascadia Code NF' style=Regular
+italic_font      family='Cascadia Code NF' style='Light Italic'
+bold_italic_font family='Cascadia Code NF' style=Italic
+# END_KITTY_FONTS
