Moving to gruvbox-material-soft

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -95,7 +95,7 @@ set -g mouse on
 
 # gruvbox material dark
 thm_black="#665c54"
-thm_bg="#282828"
+thm_bg="#32302f"
 thm_bg2="#32302f"
 thm_bg3="#45403d"
 thm_brightblack="#928374"
