--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,7 +4,7 @@ macos_show_window_title_in none
 modify_font cell_height 5
 modify_font cell_width 90%
 modify_font baseline -1px
-font_size 16
+font_size 18
 
 cursor_shape block
 cursor_blink_interval 0
@@ -15,7 +15,7 @@ hide_window_decorations yes
 shell .
 
 include themes/gruvbox-material-dark-soft.conf
-font_family      family="FiraCode Nerd Font" style=Light features="+dlig +zero"
-bold_font        family="Firacode Nerd Font" style=Regular features="+dlig +zero"
-italic_font      family='FiraCode Nerd Font' style=Light features="+dlig +zero"
-bold_italic_font family="FiraCode Nerd Font" style=Regular features="+dlig +zero"
+font_family      family="FiraCode Nerd Font Mono" style=Light features="+dlig +zero"
+bold_font        family="FiraCode Nerd Font Mono" style=Regular features="+dlig +zero"
+italic_font      family="FiraCode Nerd Font Mono" style=Light features="+dlig +zero"
+bold_italic_font family="FiraCode Nerd Font Mono" style=Regular features="+dlig +zero"
