--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,8 +2,8 @@ macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
 modify_font cell_height 5
-modify_font cell_width 90%
-modify_font baseline -1px
+modify_font cell_width 100%
+modify_font baseline 0px
 font_size 18
 
 cursor_shape block
@@ -15,7 +15,8 @@ hide_window_decorations yes
 shell .
 
 include themes/gruvbox-material-dark-soft.conf
-font_family      family="FiraCode Nerd Font Mono" style=Light features="+dlig +zero"
-bold_font        family="FiraCode Nerd Font Mono" style=Regular features="+dlig +zero"
-italic_font      family="FiraCode Nerd Font Mono" style=Light features="+dlig +zero"
-bold_italic_font family="FiraCode Nerd Font Mono" style=Regular features="+dlig +zero"
+
+font_family      family="Iosevka Nerd Font Mono" features="+dlig ss05"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
