--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -79,8 +79,8 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 0
-    gaps_out = 0
+    gaps_in = 5
+    gaps_out = 5
     border_size = 3
     col.active_border = rgba(d4be98ff)
     col.inactive_border = rgba(282828ff)
@@ -165,6 +165,8 @@ windowrulev2 = minsize 1 1, class:^(OrcaSlicer)$,title:(^orca-slicer$)
 # windowrulev2 = noinitialfocus, class:^(OrcaSlicer)$,title:(^orca-slicer$)
 # fixing runelite's menus
 windowrulev2 = stayfocused,class:(runelite)
+# rounding the edges
+windowrulev2 = rounding 5, class:.*
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
