--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,7 +16,7 @@ shell .
 
 include themes/gruvbox-material-dark-soft.conf
 
-font_family      family="Iosevka Nerd Font Mono" features="+dlig ss05"
+font_family      family="Iosevka Nerd Font Mono" features="+dlig ss05" style="light"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
