--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -120,15 +120,15 @@ set -g pane-border-style fg=$thm_black
 set -g status-style bg=$thm_bg
 # set -g status-fg red
 # setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format "\ue0b6#[fg=$thm_bg,bg=$thm_fg]#I#[fg=$thm_fg,bg=$thm_bg3]\ue0b4#[fg=$thm_fg,bg=$thm_bg3] #W #F#[fg=$thm_bg3,bg=$thm_bg]\ue0b4"
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_fg] #I #[fg=$thm_fg,bg=$thm_bg3] #W #F "
 
 # setw -g window-status-style fg=red,bg=#555555,none
-setw -g window-status-format "#[fg=$thm_bg3,bg=$thm_bg2]\ue0b6#[fg=$thm_gray,bg=$thm_bg3]#I#[fg=$thm_bg3,bg=$thm_bg2]\ue0b4#[fg=$thm_gray,bg=$thm_bg2] #W #F "
+setw -g window-status-format "#[fg=$thm_bg3,bg=$thm_bg2] #I #[fg=$thm_gray,bg=$thm_bg2] #W #F "
 
 set -g status-left-style none
-set -g status-left "#[fg=$thm_bg,bg=$thm_gray] #H#[fg=$thm_gray,bg=$thm_bg]\ue0b4#[bg=$thm_bg]"
+set -g status-left "#[fg=$thm_bg,bg=$thm_gray] #H #[fg=$thm_gray,bg=$thm_bg]#[bg=$thm_bg]"
 set -g status-left-length 50
-set -g status-right "#[fg=$thm_gray,bg=$thm_bg] #P \ue0b6#[fg=$thm_bg,bg=$thm_gray] %H:%M:%S "
+set -g status-right "#[fg=$thm_gray,bg=$thm_bg] #P #[fg=$thm_bg,bg=$thm_gray] %H:%M:%S "
 
 # setting highlight mode styling
 setw -g mode-style "fg=$thm_bg bg=$thm_blue"
