--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -107,6 +107,11 @@ thm_yellow="#d8a657"
 thm_blue="#7daea3"
 thm_orange="#e78a4e"
 
+sep_lh_angle="\ue0b8"
+sep_rh_angle="\ue0ba"
+sep_point_left="\ue0b2"
+sep_point_right="\ue0b0"
+
 # colourisation of bars
 set -g pane-active-border-style fg=$thm_blue
 set -g pane-border-style fg=$thm_black
@@ -126,9 +131,9 @@ setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_fg] #I #[fg=$thm_fg,b
 setw -g window-status-format "#[fg=$thm_bg3,bg=$thm_bg2] #I #[fg=$thm_gray,bg=$thm_bg2] #W #F "
 
 set -g status-left-style none
-set -g status-left "#[fg=$thm_bg,bg=$thm_gray] #H #[fg=$thm_gray,bg=$thm_bg]#[bg=$thm_bg]"
+set -g status-left "#[fg=$thm_bg,bg=$thm_gray] #H #[fg=$thm_gray,bg=$thm_bg]#[bg=$thm_bg]$sep_lh_angle"
 set -g status-left-length 50
-set -g status-right "#[fg=$thm_gray,bg=$thm_bg] #P #[fg=$thm_bg,bg=$thm_gray] %H:%M:%S "
+set -g status-right "#[fg=$thm_gray,bg=$thm_bg] #P $sep_rh_angle#[fg=$thm_bg,bg=$thm_gray] %H:%M:%S "
 
 # setting highlight mode styling
 setw -g mode-style "fg=$thm_bg bg=$thm_blue"
