Moving everything to kanagawa_dragon, back to FiraCode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,61 +51,19 @@ bind b break-pane
 # set -g mouse-resize-pan on
 set -g mouse on
 
-# --> Catppuccin (Mocha)
-# thm_bg="#1e1e2e"
-# thm_fg="#cdd6f4"
-# thm_cyan="#89dceb"
-# thm_black="#181825"
-# thm_gray="#313244"
-# thm_magenta="#cba6f7"
-# thm_pink="#f5c2e7"
-# thm_red="#f38ba8"
-# thm_green="#a6e3a1"
-# thm_yellow="#f9e2af"
-# thm_blue="#89b4fa"
-# thm_orange="#fab387"
-# thm_black4="#585b70"
-
-# gruvbox
-# thm_bg="#282828"
-# thm_fg="#ebdbb2"
-# thm_cyan="#689d6a"
-# thm_black="#282828"
-# thm_gray="#928374"
-# thm_magenta="#b16286"
-# thm_pink="#d3869b"
-# thm_red="#cc241d"
-# thm_green="#98971a"
-# thm_yellow="#d79921"
-# thm_blue="#458588"
-# thm_orange="#d65d0e"
-# thm_black4="#1d2021"
-
-# nord
-# thm_black="#2e3440"
-# thm_bg="#3b4252"
-# thm_brightblack="#434c5e"
-# thm_gray="#4c566a"
-# thm_fg="#d8dee9"
-# thm_red="#bf616a"
-# thm_green="#a3be8c"
-# thm_yellow="#ebcb8b"
-# thm_blue="#5e81ac"
-# thm_orange="#d08770"
-
-# gruvbox material dark
-thm_black="#665c54"
-thm_bg="#32302f"
-thm_bg2="#32302f"
-thm_bg3="#45403d"
-thm_brightblack="#928374"
-thm_gray="#d4be98"
-thm_fg="#d4be98"
-thm_red="#ea6962"
-thm_green="#a9b665"
-thm_yellow="#d8a657"
-thm_blue="#7daea3"
-thm_orange="#e78a4e"
+# kanagawa dragon
+thm_bg="#181616"
+thm_black="#0d0c0c"
+thm_black2="#12120f"
+thm_brightblack="#a6a69c"
+thm_red="#c4746e"
+thm_green="#8a9a7b"
+thm_yellow="#c4b28a"
+thm_blue="#8ba4b0"
+thm_magenta="#a292a3"
+thm_cyan="#8ea4a2"
+thm_gray="#c8c093"
+thm_fg="#c5c9c5"
 
 sep_lh_angle="\ue0b8"
 sep_rh_angle="\ue0ba"
@@ -125,10 +83,10 @@ set -g pane-border-style fg=$thm_black
 set -g status-style bg=$thm_bg
 # set -g status-fg red
 # setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_fg] #I #[fg=$thm_fg,bg=$thm_bg3] #W #F "
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_yellow] #I #[fg=$thm_fg,bg=$thm_black2] #W #F "
 
 # setw -g window-status-style fg=red,bg=#555555,none
-setw -g window-status-format "#[fg=$thm_bg3,bg=$thm_bg2] #I #[fg=$thm_gray,bg=$thm_bg2] #W #F "
+setw -g window-status-format "#[fg=$thm_brightblack,bg=$thm_black2] #I #[fg=$thm_brightblack,bg=$thm_black2] #W #F "
 
 set -g status-left-style none
 set -g status-left "#[fg=$thm_bg,bg=$thm_gray] #H #[fg=$thm_gray,bg=$thm_bg]#[bg=$thm_bg]$sep_lh_angle"
