--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,6 +13,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=,preferred,auto,auto
 monitor=HDMI-A-1,2560x1440@60,0x0,1.0
+monitor=FALLBACK,1928x1080@60,auto,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 exec-once = hyprctl setcursor capitaine-cursors 64
@@ -135,11 +136,6 @@ master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_status = master
     # new_is_master = true
-}
-
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
 }
 
 misc {
